--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Chatbot using an API for currency quotation on-the-go",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
